# cargo-release-oxc

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  justfile  release-plz.toml
.github/: renovate.json
.github/workflows/: autofix.yml  ci.yml  release-binaries.yml  release-plz.yml  release.yml
src/: cargo_command.rs  changelog.rs  config.rs  lib.rs  main.rs  publish.rs  update.rs
src/versioning/: cargo.rs  mod.rs  package_json.rs
