[package]
name        = "cargo-release-oxc"
version     = "0.0.22"
edition     = "2021"
description = "Oxc release management"
authors     = ["Boshen <boshenc@gmail.com>"]
repository  = "https://github.com/oxc-project/cargo-release-oxc"
keywords    = []
categories  = []
license     = "MIT"
readme      = "README.md"

[lints.clippy]
all                         = { level = "warn", priority = -1 }
pedantic                    = { level = "warn", priority = -1 }
nursery                     = { level = "warn", priority = -1 }
dbg_macro                   = "warn"
empty_drop                  = "warn"
exit                        = "warn"
empty_structs_with_brackets = "warn"
rc_buffer                   = "warn"
rc_mutex                    = "warn"
same_name_method            = "warn"
missing_errors_doc          = "allow"
missing_panics_doc          = "allow"
module_name_repetitions     = "allow"

[lib]
doctest = false

[[bin]]
name = "cargo-release-oxc"
path = "src/main.rs"
test = false

[dependencies]
anyhow         = "1.0.86"
bpaf           = { version = "0.9.12", features = ["derive", "batteries"] }
cargo_metadata = "0.18.1"
git-cliff-core = { version = "2.5.0", default-features = false, features = ["repo"] }
glob           = "0.3.1"
toml_edit      = { version = "0.22.14", features = ["parse"] }
crates_io_api  = { version = "0.11.0", default-features = false, features = ["rustls"] }
toml           = "0.8.14"
serde          = "1.0.203"
serde_json     = { version = "1.0.117", features = ["preserve_order"] }
regex          = "1.10.5"
